@@ -2,6 +2,7 @@ package models;
 
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
@@ -22,16 +23,15 @@ public class Board implements Serializable {
     public static final String FREE_FOLK = "Free Folk";
     public static final String BARATHEON = "Baratheon";
     public static final String TARGARYEN = "Targaryen";
-    
     protected LinkedList<Player> players;
     protected static Board instance;
     protected int currentPlayer;
     protected int numberOfSwaps;
     protected StatisticGameManager statistic;
-    
-    private Region [] regions;
-    private Territory [] territories;
+    private Region[] regions;
+    private Territory[] territories;
     private ArrayList<House> houses;
+    private ArrayList<Mission> missions;
     private boolean isOnInitialSetup;
 
     protected Board() {
@@ -42,19 +42,22 @@ public class Board implements Serializable {
         statistic = new StatisticGameManager();
         isOnInitialSetup = true;
         houses = new ArrayList<House>();
+        missions = new ArrayList<Mission>();
         
-        if(regions == null)
+        if (regions == null) {
             retrieveTerritories();
+        }
     }
-    
-    private void retrieveTerritories(){
+
+    private void retrieveTerritories() {
         System.out.println("Filling board territories");
         regions = new Region[6];
-        String [] regionNames = {"Além da Muralha", "Cidades Livres", "O Norte", "Sul", "Tridente", "O Mar Dothraki"};
-        int [] bonus = {Region.ALEM_DA_MURALHA, Region.CIDADES_LIVRES, Region.O_NORTE, Region.O_SUL, Region.TRIDENTE, Region.O_MAR_DOTHRAKI};
-        for(int i = 0; i < regionNames.length; i++)
+        String[] regionNames = {"Além da Muralha", "Cidades Livres", "O Norte", "Sul", "Tridente", "O Mar Dothraki"};
+        int[] bonus = {Region.ALEM_DA_MURALHA, Region.CIDADES_LIVRES, Region.O_NORTE, Region.O_SUL, Region.TRIDENTE, Region.O_MAR_DOTHRAKI};
+        for (int i = 0; i < regionNames.length; i++) {
             regions[i] = new Region(regionNames[i], bonus[i]);
-        
+        }
+
         //alem da muralha
         Region current = regions[0];
         territories = new Territory[39];
@@ -65,7 +68,7 @@ public class Board implements Serializable {
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.SEMPRE_INVERNO, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.ILHA_DOS_URSOS, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.SKAGOS, struct));
-        
+
         //cidades livres
         current = regions[1];
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.COSTA_LARANJA, struct));
@@ -76,7 +79,7 @@ public class Board implements Serializable {
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.FLORESTA_DE_QOHOR, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.THE_FLATLANDS, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.VALIRIA, struct));
-        
+
         //o norte
         current = regions[2];
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.A_DADIVA, struct));
@@ -86,7 +89,7 @@ public class Board implements Serializable {
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.PENHASCO_SOMBRIO, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.THE_HILLS, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.WINTERFELL, struct));
-        
+
         //o sul
         current = regions[3];
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.ARVORE, struct));
@@ -96,7 +99,7 @@ public class Board implements Serializable {
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.MONTE_CHIFRE, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.TARTH, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.TERRAS_DA_TEMPESTADE, struct));
-        
+
         //tridente
         current = regions[4];
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.MONTANHAS_DA_LUA, struct));
@@ -106,7 +109,7 @@ public class Board implements Serializable {
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.PORTO_REAL, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.ROCHEDO_CASTERLY, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.TERRAS_FLUVIAIS, struct));
-        
+
         //o mar dothraki
         current = regions[5];
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.GHISCAR, struct));
@@ -115,8 +118,43 @@ public class Board implements Serializable {
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.OROS, struct));
         current.addTerritory(territories[tIndex++] = new Territory(TerritoryID.FOOTPRINT, struct));
     }
-    
-    public Territory [] getTerritories(){
+
+    public void createMissions() {
+        Region empty = new Region(null, 0);
+        ArrayList<Region> allRegions = new ArrayList<Region>();
+        allRegions.add(regions[0]);
+        allRegions.add(regions[3]);
+        allRegions.add(empty);
+        missions.add(new Mission("", Mission.TYPE_REGION, allRegions));
+        allRegions.clear();
+        allRegions.add(regions[1]);
+        allRegions.add(regions[0]);
+        missions.add(new Mission("", Mission.TYPE_REGION, allRegions));
+        allRegions.clear();
+        allRegions.add(regions[2]);
+        allRegions.add(regions[5]);
+        allRegions.add(empty);
+        missions.add(new Mission("", Mission.TYPE_REGION, allRegions));
+        allRegions.clear();
+        allRegions.add(regions[1]);
+        allRegions.add(regions[4]);
+        missions.add(new Mission("", Mission.TYPE_REGION, allRegions));
+        allRegions.clear();
+        allRegions.add(regions[2]);
+        allRegions.add(regions[3]);
+        missions.add(new Mission("", Mission.TYPE_REGION, allRegions));
+        allRegions.clear();
+        allRegions.add(regions[4]);
+        allRegions.add(regions[5]);
+        missions.add(new Mission("", Mission.TYPE_REGION, allRegions));
+        missions.add(new Mission("", Mission.TYPE_TERRITORY, 23));
+        missions.add(new Mission("", Mission.TYPE_TERRITORY, 17));
+        for (int i = 0; i < houses.size(); i++) {
+            missions.add(new Mission("", Mission.TYPE_HOUSE, houses.get(i)));
+        }
+    }
+
+    public Territory[] getTerritories() {
         return territories;
     }
 
@@ -126,8 +164,8 @@ public class Board implements Serializable {
         }
         return instance;
     }
-    
-    public static void reset(){
+
+    public static void reset() {
         instance = null;
     }
 
@@ -148,7 +186,7 @@ public class Board implements Serializable {
     public boolean removePlayer(Player player) {
         return players.remove(player);
     }
-    
+
     public void addHouse(House house) {
         houses.add(house);
     }
@@ -156,7 +194,7 @@ public class Board implements Serializable {
     public Player getPlayer(int playingOrder) {
         return players.get(playingOrder);
     }
-    
+
     public int getPlayerOrder(Player p) {
         return players.indexOf(p);
     }
@@ -169,6 +207,14 @@ public class Board implements Serializable {
         return players;
     }
 
+    public void setHouses(ArrayList<House> houses) {
+        this.houses = houses;
+    }
+
+    public void setMissions(ArrayList<Mission> missions) {
+        this.missions = missions;
+    }
+    
     public List<House> getHouses() {
         List<House> houses = new ArrayList<House>();
         for (Player player : getPlayers()) {
@@ -188,124 +234,131 @@ public class Board implements Serializable {
     public boolean isPlayerCountValid() {
         return (players.size() >= 2 && players.size() <= 6);
     }
-    
+
     public boolean isOnInitialSetup() {
         return isOnInitialSetup;
     }
 
-    public List<House> getAbsentHouses(LinkedList<House> allHouses) {
-        List<House> absentHouses = new ArrayList<House>();
-        List<House> presentHouses = getHouses();
+//    public List<House> getAbsentHouses() {
+//        List<House> absentHouses = new ArrayList<House>();
+//        List<House> presentHouses = getHouses();
+//
+//        if (players.size() != 6) {
+//            for (House house : houses) {
+//                if (!presentHouses.contains(house)) {
+//                    absentHouses.add(house);
+//                }
+//            }
+//            return absentHouses;
+//        } else {
+//            return null;
+//        }
+//    }
 
-        if (players.size() != 6) {
-            for (House house : allHouses) {
-                if (!presentHouses.contains(house)) {
-                    absentHouses.add(house);
-                }
-            }
-            return absentHouses;
-        } else {
-            return null;
-        }
-    }
-    
     public Player nextPlayer(Player player) {
         int i;
         for (i = 0; i < this.getPlayers().size(); i++) {
             if (player == this.getPlayer(i)) {
                 break;
-            }            
+            }
         }
-        if (i == this.getPlayers().size()) { 
+        if (i == this.getPlayers().size()) {
             i = 0;
-        }
-        else {
+        } else {
             i++;
         }
         return players.get(i);
     }
-    
+
     public void changePlayer() {
         int oldPlayer = this.currentPlayer;
-        
+
         int playersCount = this.getPlayers().size();
         if (oldPlayer == this.getPlayers().size() - 1) {
             currentPlayer = 0;
             isOnInitialSetup = false;
-        }
-        else 
+        } else {
             currentPlayer++;
+        }
         addPlayerArmies();
     }
-    
-    private void addPlayerArmies(Player curr){
+
+    private void addPlayerArmies(Player curr) {
         int territoryCount = curr.getTerritories().size();
         int pendingArmies = curr.getPendingArmies();
         pendingArmies += territoryCount / 2;
-        for(Region r : regions)
-            if(r.conqueredByPlayer(curr)){
+        for (Region r : regions) {
+            if (r.conqueredByPlayer(curr)) {
                 pendingArmies += r.getBonus();
                 System.out.println("receiving " + r.getBonus() + " from " + r);
             }
+        }
         curr.setPendingArmies(pendingArmies);
     }
-    
-    private void addPlayerArmies(){
+
+    private void addPlayerArmies() {
         addPlayerArmies(getCurrentPlayer());
     }
 
     public StatisticGameManager getStatistic() {
         return statistic;
     }
-    
+
     public void distributeInitialTerritories() {
         RepositoryCardsTerritory.getInstance().initialRaffle();
         for (Player player : players) {
             for (CardTerritory card : player.getCards()) {
-                player.addTerritory(card.getTerritory());                
+                player.addTerritory(card.getTerritory());
             }
             player.getCards().clear();
         }
         addPlayerArmies();
     }
-    
-     public void shuffleMissions(LinkedList<Mission> mission) {
+
+    public void shuffleMissions(ArrayList<Mission> mission) {
         Collections.shuffle(mission);
     }
-    
-    public LinkedList<Mission> raffleMission(LinkedList<Mission> allMissions, LinkedList<House> allHouses) {
+
+    public void raffleMission() {
         int size = players.size();
 
-        LinkedList<Mission> r = removeMissions(allMissions, allHouses);
-        shuffleMissions(r);
+       // ArrayList<Mission> r = removeMissions();
+        shuffleMissions(missions);
 
         for (int i = 0; i < size; i++) {
             Player p = this.getPlayer(i);
-            Mission mission = r.peekFirst();
+            Mission mission = missions.get(0);
             while (mission.hasSameHouse(p)) {
-                shuffleMissions(r);
-                mission = r.peekFirst();
+                shuffleMissions(missions);
+                mission = missions.get(0);
             }
-            p.setMission(r.removeFirst());
+            p.setMission(missions.remove(0));
         }
-        return r;
     }
 
-    public LinkedList<Mission> removeMissions(LinkedList<Mission> allMissions, LinkedList<House> allHouses) {
-        List<House> absentHouses = this.getAbsentHouses(allHouses);
-        LinkedList<Mission> answer = (LinkedList<Mission>) allMissions.clone();
-
-        for (int i = 0; i < answer.size(); i++) {
-            Mission mission = answer.get(i);
-            for (House h : absentHouses) {
-                if ((mission.getType() == Mission.TYPE_HOUSE) && (mission.getHouse().equals(h))) {
-                    answer.remove(answer.get(i));
-                    i--;
-                }
-            }
-        }
-        return answer;
-    }
+//    public ArrayList<Mission> removeMissions() {
+//        //List<House> absentHouses = this.getAbsentHouses();
+//        boolean found = false;
+//        ArrayList<Mission> answer = new ArrayList<Mission>();
+//
+//        answer = missions;
+//
+//        for (int i = 0; i < answer.size(); i++) {
+//            Mission mission = answer.get(i);
+//            if ((mission.getType() == Mission.TYPE_HOUSE)) {
+//                for (int j = 0; j < houses.size(); j++) {
+//                    if (mission.getHouse().equals(houses.get(j))) {
+//                        found = true;
+//                    }
+//                }
+//                if (!found) {
+//                    answer.remove(answer.get(i));
+//                    i--;
+//                }
+//            }
+//        }
+//        return answer;
+//    }
 
     public Region[] getRegions() {
         return regions;
